# tutorials

./: .gitignore  README.md
weather-cli/: .env  Cargo.toml  Makefile  README.md
weather-cli/src/: main.rs
weather-cli/src/test/: test.rs
