[package]
name = "weather"
version = "0.1.0"
authors = ["tranthiainhi303@gmail.com"]
repository = ""

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.12.3", features = ["json", "blocking", "gzip", "deflate"] }
prettytable = "0.10.0"

[features]
default = []


